# mcp-citation-research

./: .env.example  .gitignore  README.md  REFERENCES.md  install.sh  pyproject.toml  server.json  smithery.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  install-test.yml  release.yml
benchmarks/: mandate_vs_no_mandate.py
daemon/: go.mod
daemon/cmd/citation-researchd/: auth_test.go  handlers_test.go  main.go
daemon/internal/fetch/: fetch.go  fetch_test.go
daemon/internal/search/: duckduckgo.go  duckduckgo_test.go  search.go  search_test.go
daemon/internal/session/: session.go  session_test.go
docs/distribution/: glama-listing.md
lib/: installer-core.sh
scripts/: install-termux.sh
server/: README.md  pyproject.toml
server/citation_research/: __init__.py  _cite.py  _daemon_client.py  _verify.py  mcp_server.py  mcts_query_selector.py
server/tests/: test_cite.py  test_daemon_client.py  test_mcp_server.py  test_mcts_query_selector.py  test_rerank.py  test_verify.py
tests/: test_installer_core.bats
