[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-research"
version = "0.1.0"
description = "MCP server with confidence-gated synthesis + BM25 citation injection. Pairs with the citation-researchd Go daemon for I/O-bound operations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = []
keywords = ["mcp", "research", "rag", "citations", "bm25", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31",
    "rank_bm25>=0.2.2",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
citation-research-mcp = "citation_research.mcp_server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["citation_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
